link_libraries(ejdb_p)
add_executable(jbfmgr jbfmgr.c)

set_target_properties(jbfmgr PROPERTIES
					  COMPILE_FLAGS "-DEJDB_STATIC")
					  
install(TARGETS jbfmgr
	FRAMEWORK DESTINATION ${FRAMEWORK_INSTALL_DIR}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME})
