link_libraries(ejdb_p)
add_executable(tchmgr tchmgr.c)
set_target_properties(tchmgr PROPERTIES
					  COMPILE_FLAGS "-DEJDB_STATIC")

install(TARGETS tchmgr
	FRAMEWORK DESTINATION ${FRAMEWORK_INSTALL_DIR}
	LIBRARY DESTINATION ${LIB_INSTALL_DIR}
	RUNTIME DESTINATION ${BIN_INSTALL_DIR}
	ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
	PUBLIC_HEADER DESTINATION ${INCLUDE_INSTALL_DIR})
